# WesAI

.claude/: launch.json
.github/workflows/: backup.yml  ci.yml
cafe-mcp/: .env.example  Dockerfile  README.md  TEST_PLAN.md  config.py  main.py  nixpacks.toml  railway.toml  requirements.txt
cafe-mcp/CafeMCP.com/: README.md  (+1 more)
cafe-mcp/mcp-common/: pyproject.toml
cafe-mcp/mcp-common/mcp_common/: __init__.py  audit.py  auth.py  clientcache.py  crypto.py  db.py  fastmcp_audit.py  htmlpages.py  identity.py  middleware.py  migrate.py  oauth.py  publicsite.py  ratelimit.py  serverapp.py  store.py  tenant.py
cafe-mcp/mcp-common/mcp_common/onboarding/: google_flow.py  html.py  links.py  login_flow.py  meta_flow.py  routes.py
cafe-mcp/mcp-common/mcp_common/portal/: html.py  routes.py
cafe-mcp/mcp-common/migrations/: 002_onboarding.sql  003_tenant_identities.sql
cafe-mcp/mcp-common/tests/: test_core.py  test_identity.py  test_login_portal.py  test_middleware.py  test_oauth.py  test_oauth_login_routes.py  test_onboarding_portal.py
docs/: onboarding.md  runbook.md
operations-vision/: .env.example  .gitignore  LICENSES.md  README.md  docker-compose.yml
shibam-coffee-website/: README.md  TEST_PLAN.md  _redirects  about.html  catering-events.html  contact.html  index.html  location.html  menu.html  privacy-policy.html  robots.txt  seo-notes.md  sitemap.xml  terms.html  tracking-notes.md
shibam-financial-mcp/: .env.example  README.md  config.py  main.py  railway.toml  requirements.txt
shibam-marketing-mcp/: .env.example  README.md  config.py  main.py  railway.toml
(+205 files in other folders)
