[project]
name = "mcp-common"
version = "0.1.0"
description = "Shared multi-tenant infrastructure for WesAI MCP servers: auth, tenant context, credential store, audit, rate limiting."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "asyncpg>=0.29.0",
    "starlette>=0.37.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_common*"]
